# mlops-workshop

./: .env.template  .gitignore  Dockerfile  README.md  mlflow-deployment.yaml  requirements.txt  send_data_to_endpoint.py  setup.cfg
.azure_ml/: job.yml
.devcontainer/: devcontainer.json  devcontainer_setup.sh
.github/workflows/: build_push_image.yml  deploy_azure.yml  deploy_gcp.yml  pipeline.yml
data/: README.md  T1.csv  scada.parquet  turbine-data.csv
exercises/: 01-explore-data.ipynb  02-model-training.ipynb  02-train-model.ipynb  03-load-model-for-inference.ipynb  03-track-experiments.ipynb  04-load-model-for-inference.ipynb  05-create-and-run-api.md  06-containerize-application.md  07-register-on-dockerhub.md  08-deploy-to-the-cloud.md  08a-deploy-to-azure.md  08b-deploy-to-gcp.md  08c-deploy-elsewhere.md  09-(bonus)-automate-with-cicd.md  README.md
infra/: Dockerfile  README.md  mlflow-deployment.yaml
notebooks/: mlflow-demo.ipynb
src/: inference.py
turbine_power/: __init__.py  app.py  inference.py  model_utils.py
