# install with: pip install -e .
# install extras with: pip install -e ".[notebook,dev]"

[metadata]
name = turbine-power
version = 0.0.1

[options]
packages = find:
install_requires =
    mlflow==2.4.1
    scikit-learn==1.3.0
    pandas==2.0.3
    plotly-express==0.4.1
    fastparquet==2023.7.0 
    pyarrow==12.0.1
    kaleido==0.2.1
    fastapi==0.100.0
    uvicorn==0.22.0

[options.extras_require]
notebook = 
    jupyter==1.0.0
    ipykernel==6.24.0
    nbformat==5.9.0
# dev = 
#     black==22.1.0
#     flake8==4.0.1
