# This file specifies the dependencies of our turbine-power package.
# Together with pyproject.toml, it is used by pip to install the package.

# Install with: pip install -e .
# Install extras with: pip install -e ".[notebook]"

[metadata]
name = turbine-power
version = 0.0.1

[options]
packages = find:
install_requires =
    mlflow==2.4.1
    scikit-learn==1.3.0
    pandas==2.0.3
    plotly-express==0.4.1
    fastapi==0.100.0
    uvicorn==0.22.0

[options.extras_require]
notebook = 
    jupyter==1.0.0
    ipykernel==6.24.0
    nbformat==5.9.0
